--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ input[type="number"] {
     width: 50px;
 }
 
-.container{
+/* .container{
     margin-top: 30vh;
-}
+} */
 
 table{
     /* border:  red solid 1px; */
@@ -77,3 +77,66 @@ textarea{
     from {bottom: 30px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
   }
+
+  .container{
+    max-width: 100vw;
+    height: 100%;
+  display: flex;
+  align-items:flex-start;
+  justify-content: center;
+  padding: 20px;
+  gap: 20px;
+
+  }
+
+  .btn-primary{
+    margin-top: 20px;
+    padding: 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    background-color: teal;
+    color: #fff;
+  }
+
+  .btn-primary:hover{
+    background-color: brown;
+  }
+  .file{
+    float: right;
+  }
+
+  textarea{
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    outline: none;
+    border: 1px solid #ccc;
+    
+  }
+  input{
+    outline: none;
+    margin-top: 5px;
+    width: 150px;
+    height: 30px;
+    padding: 10px;
+    line-height: 100%; 
+    font-size: 16px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+  }
+ 
+
+  .Encrypt{
+    flex: 1;
+
+  }
+  .Decrypt{
+    flex: 1;
+  }
+
+  label{
+
+    cursor: pointer;
+  }
+  
